--- a/test.cls
+++ b/test.cls
@@ -1,3 +1,4 @@
 public with sharing class AIAnalysis {
 	public class AIAnalysisException extends Exception {}
+	public class AIAnalysisException extends Exception {}
 }
